# project-kedro-nolib

./: .gitignore  README.md  pyproject.toml
config/: pipeline.yml  pipeline_marketing.yml
config/schema/: churn_customers.yml  marketing_leads.yml
dags/: plain_mlops_training_dag.py
data/99_object_storage/: customers.csv  marketing_leads.csv
outputs/: metrics.json  model.joblib
outputs/marketing/: model.joblib
src/plain_mlops/: __init__.py  __main__.py  airflow_runner.py  cli.py  config_loader.py  ingestion.py  pipeline.py  processing.py  schema.py  storage.py
